# gtec-demo-framework

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  FslBuildGen.xsd  KnownIssues.md  KnownIssues.txt  License.md  Project.gen  README.md  SCR-gtec-demo-framework.txt  TexturePackerConfig.xml  prepare.bat  prepare.sh
.Config/: ConfigureEGL.bat  ConfigureOpenGLES.bat  ConfigureOpenGLES2.bat  ConfigureOpenGLES3.bat  ConfigureOpenGLESEmu.bat  ConfigureOpenVG.bat  ConfigureTest_TestPackage_DynamicVariant.bat  FslBuild.bat  FslBuild.py  FslBuildCheck.bat  FslBuildCheck.py  FslBuildClean.bat  FslBuildClean.py  FslBuildContent.bat  FslBuildContent.py  FslBuildDoc.bat  FslBuildDoc.py  FslBuildDumpEnv.bat  FslBuildDumpEnv.py  FslBuildExternal.bat  FslBuildExternal.py  FslBuildGen.bat  FslBuildGen.py  FslBuildGen.xml  FslBuildGenConfig.xsd  FslBuildInfo.bat  FslBuildInfo.py  FslBuildNew.bat  FslBuildNew.py  FslBuildRun.bat  FslBuildRun.py  FslBuildSave.bat  FslBuildSave.py  FslBuildTemplate.xsd  FslConfigure.sh  FslContentSync.bat  FslContentSync.py  FslFontHelper.bat  FslFontHelper.py  FslNewDemoProject.bat  (+8 more)
.Config/Configure/: ConfigureOpenGLES_Angle.bat  ConfigureOpenGLES_Arm.bat  ConfigureOpenGLES_PowerVR.bat  ConfigureOpenGLES_PowerVR_Frame.bat  ConfigureOpenGLES_PowerVR_Trace.bat  ConfigureOpenGLES_Qualcomm.bat  ConfigureOpenGLES_Qualcomm_d.bat  ConfigureOpenGLES_Vivante.bat  ConfigureOpenVG_Reference.bat
.Config/FslBuildGen/: AndroidUtil.py  BannedCommands.py  BasicConfig.py  CMakeConfigUtil.py  CMakeIgnoreDirUtil.py  CMakeUtil.py  Config.py  DataTypes.py  DependencyGraph.py  ErrorHelpManager.py  Exceptions.py  ExtensionListManager.py  ExtensionListManager2.py  ExternalVariantConstraints.py  GitUtil.py  IOUtil.py  LibUtil.py  Log.py  Main.py  MakeFileHelper.py  MatchUtil.py  Package.py  PackageBuildCustomization.py  PackageBuildReport.py  PackageBuilder.py  PackageCachedLocation.py  PackageConfig.py  PackageDependency.py  PackageFile.py  PackageFilters.py  PackageFinder.py  PackageListUtil.py  PackageLoader.py  PackageLocationCache.py  PackageManager.py  PackagePath.py  PackagePlatform.py  PackagePlatformVariant.py  PackageResolver.py  PackageTemplateLoader.py  (+34 more)
.Config/FslFontHelper/: AngelCodeFontReader.py  BasicFont.py  BasicKerningObjects.py  BitmapFont.py  FormatPlugin.py  FormatPluginBasicKerning.py  FormatPluginBitmapFont.py  FormatPluginBitmapFontJson.py  FormatPluginFontBasicKerning.py  FormatPluginFontBasicKerningUtil.py  IOUtil.py  Main.py  PythonVersionCheck.py  SpriteFontCreator2Reader.py  TypeConverter.py  __init__.py
.Config/Import.gen/: DemoAppConsole.gen  DemoAppConsoleMinimal.gen  DemoAppG2D.gen  DemoAppGLES2.gen  DemoAppGLES3.HDR.gen  DemoAppGLES3.gen  DemoAppOpenCL.gen  DemoAppOpenCL1_1.gen  DemoAppOpenCL1_2.gen  DemoAppOpenCV2_4.gen  DemoAppOpenCV3.gen  DemoAppOpenCV3_1.gen  DemoAppOpenCV4.gen  DemoAppOpenVG.gen  DemoAppOpenVX.gen  DemoAppOpenVX1_0_1.gen  DemoAppOpenVX1_1.gen  DemoAppOpenVX1_2.gen  DemoAppStub.gen  DemoAppVulkan.HDR.gen  DemoAppVulkan.gen  DemoAppWindow.gen  VulkanRawVKTSDemoApp.gen  VulkanVKTSDemoApp.gen
.Config/Jenkins/: DemoFramework_WinArm.bat  PrepareJenkinsEnvironment.bat  PrepareJenkinsEnvironment.sh  Review_DemoFramework_Android.sh  Review_DemoFramework_AndroidNew.sh  Review_DemoFramework_UbuntuQnx.sh  Review_DemoFramework_UbuntuX11.sh  Review_DemoFramework_UbuntuX11A.sh  Review_DemoFramework_UbuntuX11A_Debug.sh  Review_DemoFramework_UbuntuX11_FslBuildNewSanityCheck.sh  Review_DemoFramework_UbuntuX11_TestContentSync.sh  Review_DemoFramework_WinArm.bat  Review_DemoFramework_WinArm_FslBuildNewSanityCheck.bat  Review_DemoFramework_WinArm_TestContentSync.bat  Review_DemoFramework_YoctoFB.sh  Review_DemoFramework_YoctoFB_IMX8.sh  Review_DemoFramework_YoctoWayland.sh  Review_DemoFramework_YoctoX11.sh
.Config/TPConvert/: FormatPlugin.py  FormatPluginBinaryTA1.py  FormatPluginBinaryTA2.py  FormatPluginBinaryTA3.py  FormatPluginBinaryTAUtil.py  FormatPluginCSharp.py  FormatPluginCSharp2.py  IOUtil.py  Main.py  (+5 more)
.Config/Templates.gen/AndroidGradleCMake/CMake/Ext/: CMakeLists.txt
.Config/Templates.gen/AndroidGradleCMake/CMake/Lib/: CMakeLists.txt
.Config/Templates.gen/AndroidGradleCMake/Modify/app/: CMakeLists.txt  build.gradle
.Config/Templates.gen/AndroidGradleCMake/Modify/app/src/main/: AndroidManifest.xml.__template__
.Config/Templates.gen/AndroidGradleCMake/Modify/app/src/main/cpp/: CMakeLists.txt  DemoNativeActivity.cpp.__template__
.Config/Templates.gen/AndroidGradleCMake/Modify/app/src/main/java/com/freescale/##PREFIXED_PROJECT_NAME_L##/: DemoApplication.java  DemoGameActivity.java  DemoNativeActivity.java
.Config/Templates.gen/CMake/Exe/: CMakeLists.txt
.Config/Templates.gen/CMake/Exe/CompilerId/MSVC/: resource.h
.Config/Templates.gen/CMake/Ext/: CMakeLists.txt  Package_TargetIncludeDirEntry.txt
.Config/Templates.gen/CMake/Lib/: CMakeLists.txt
.Config/Templates.gen/CMake/NotSupported/: CMakeLists.txt
.Config/Templates.gen/CMake/Root/: CMakeLists.txt
.Config/Templates.gen/CMakeFreeRTOS/Exe/: CMakeLists.txt
.Config/Templates.gen/CMakeFreeRTOS/Root/: CMakeLists.txt
Doc/: BuildingExternals.md  Changes.md  Changes.txt  Content.md  Content.txt  ContentPipeline.md  DemoFramework.docx  FslBuildGen.docx  FslBuildGenNotes.md  FslBuild_CMake.md  FslBuild_toolchain_readme.md  FslSimpleUI.md  HowToDistributeNewSample.md  Readme_FslBuild.txt  Release.md  ServiceList.md  ServiceList.txt  Setup_guide_android_sdk+ndk_on_windows.md  Setup_guide_android_sdk+ndk_on_windows.txt  Setup_guide_emscripten.md  Setup_guide_ubuntu16.04.md  Setup_guide_ubuntu16.04.txt  Setup_guide_ubuntu18.04.md  Setup_guide_ubuntu20.04.md  Setup_guide_ubuntu22.04.md  Setup_guide_windows.md  Setup_guide_windows.txt  Setup_guide_yocto.md  Setup_guide_yocto.txt  TestExamples.md  TestExamples.txt  TextureAtlasCreation.md  Vulkan.md  Vulkan.txt
Licenses/: BSD-3-clause.txt  CC-BY-3.0.txt  CC-BY-SA-4.0.txt  CC0-1.0.txt  Ms-PL.txt  Readme_license.json.txt
Resources/: README.md
Templates/: Template.cpp  Template.hpp
(+10390 files in other folders)
