# stop if cmake version below ##CMAKE_MINIMUM_VERSION##
cmake_minimum_required(VERSION ##CMAKE_MINIMUM_VERSION## FATAL_ERROR)

# project name
project(##PACKAGE_NAME##)

add_library(##PACKAGE_NAME## INTERFACE)
add_library(##ALIAS_PACKAGE_NAME## ALIAS ##PACKAGE_NAME##)
  
##PACKAGES_FIND_DIRECT_EXTERNAL_DEPENDENCIES##
##TARGET_INCLUDE_DIRECTORIES##
##PACKAGE_DIRECT_DEPENDENCIES_TARGET_LINK_LIBRARIES##
##PACKAGE_DIRECT_DEPENDENCIES_TARGET_COMPILE_DEFINITIONS##
